@@ -14,3 +14,6 @@ Unfortunately, Data.Time.LocalTime.getCurrentTimeZone doesn't seem to really
 work on windows. It always returns a time zone 60 minutes from UTS in my tests,
 no matter what the zone really is. I need to test this more widely and file
 a GHC bug if appropriate.
+
+> [[fixed|done]], avoiding using getCurrentTime for now, although I have a
+> patch to fix it too. --[[Joey]]
