@@ -11,6 +11,7 @@ git-annex (5.20140607) UNRELEASED; urgency=medium
     Linux's caching of higher res timestamps while a FAT is mounted, caused
     direct mode repositories on FAT to seem to have modified files after
     they were unmounted and remounted.
+  * Deal with Windows's horrible handling of time zone changes.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 09 Jun 2014 14:44:09 -0400
 
